// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Regression Tests - buildReport() > buildReport() produces stable output for Profile 1 1`] = `
{
  "asc": 52.41134847055815,
  "ascSign": {
    "element": "Earth",
    "glyph": "♉",
    "mode": "Fixed",
    "name": "Taurus",
    "tone": "steady, sensual, patient",
  },
  "bhagyank": 8,
  "day": 15,
  "dominant": {
    "topElement": "Earth",
    "topMode": "Cardinal",
  },
  "fullName": "John Doe",
  "hour": 12,
  "jd": 2447907.2291666665,
  "jupiter": {
    "house": 2,
    "longitude": 95.5655136384434,
    "name": "Jupiter",
    "sign": {
      "element": "Water",
      "glyph": "♋",
      "mode": "Cardinal",
      "name": "Cancer",
      "tone": "protective, intuitive, loyal",
    },
  },
  "latitude": 40.7128,
  "longitude": -74.006,
  "mars": {
    "house": 7,
    "longitude": 254.53045028247107,
    "name": "Mars",
    "sign": {
      "element": "Fire",
      "glyph": "♐",
      "mode": "Mutable",
      "name": "Sagittarius",
      "tone": "free-spirited, wise, restless",
    },
  },
  "minute": 30,
  "month": 1,
  "moon": {
    "house": 4,
    "longitude": 170.36808931000724,
    "name": "Moon",
    "sign": {
      "element": "Earth",
      "glyph": "♍",
      "mode": "Mutable",
      "name": "Virgo",
      "tone": "analytical, helpful, exacting",
    },
  },
  "mulank": 6,
  "naamank": 8,
  "planetRows": [
    {
      "house": 9,
      "longitude": 295.31158610141233,
      "name": "Sun",
      "sign": {
        "element": "Earth",
        "glyph": "♑",
        "mode": "Cardinal",
        "name": "Capricorn",
        "tone": "ambitious, disciplined, strategic",
      },
    },
    {
      "house": 4,
      "longitude": 170.36808931000724,
      "name": "Moon",
      "sign": {
        "element": "Earth",
        "glyph": "♍",
        "mode": "Mutable",
        "name": "Virgo",
        "tone": "analytical, helpful, exacting",
      },
    },
    {
      "house": 8,
      "longitude": 273.7253576836158,
      "name": "Mercury",
      "sign": {
        "element": "Earth",
        "glyph": "♑",
        "mode": "Cardinal",
        "name": "Capricorn",
        "tone": "ambitious, disciplined, strategic",
      },
    },
    {
      "house": 10,
      "longitude": 323.24892655941005,
      "name": "Venus",
      "sign": {
        "element": "Air",
        "glyph": "♒",
        "mode": "Fixed",
        "name": "Aquarius",
        "tone": "original, detached, future-minded",
      },
    },
    {
      "house": 7,
      "longitude": 254.53045028247107,
      "name": "Mars",
      "sign": {
        "element": "Fire",
        "glyph": "♐",
        "mode": "Mutable",
        "name": "Sagittarius",
        "tone": "free-spirited, wise, restless",
      },
    },
    {
      "house": 2,
      "longitude": 95.5655136384434,
      "name": "Jupiter",
      "sign": {
        "element": "Water",
        "glyph": "♋",
        "mode": "Cardinal",
        "name": "Cancer",
        "tone": "protective, intuitive, loyal",
      },
    },
    {
      "house": 8,
      "longitude": 283.8258224539464,
      "name": "Saturn",
      "sign": {
        "element": "Earth",
        "glyph": "♑",
        "mode": "Cardinal",
        "name": "Capricorn",
        "tone": "ambitious, disciplined, strategic",
      },
    },
    {
      "house": 9,
      "longitude": 317.67951670834157,
      "name": "Rahu",
      "sign": {
        "element": "Air",
        "glyph": "♒",
        "mode": "Fixed",
        "name": "Aquarius",
        "tone": "original, detached, future-minded",
      },
    },
    {
      "house": 3,
      "longitude": 137.67951670834157,
      "name": "Ketu",
      "sign": {
        "element": "Fire",
        "glyph": "♌",
        "mode": "Fixed",
        "name": "Leo",
        "tone": "expressive, warm, proud",
      },
    },
    {
      "house": 8,
      "longitude": 272.6533743559072,
      "name": "Uranus",
      "sign": {
        "element": "Earth",
        "glyph": "♑",
        "mode": "Cardinal",
        "name": "Capricorn",
        "tone": "ambitious, disciplined, strategic",
      },
    },
    {
      "house": 8,
      "longitude": 283.18352399463436,
      "name": "Neptune",
      "sign": {
        "element": "Earth",
        "glyph": "♑",
        "mode": "Cardinal",
        "name": "Capricorn",
        "tone": "ambitious, disciplined, strategic",
      },
    },
    {
      "house": 6,
      "longitude": 225.75726320905835,
      "name": "Pluto",
      "sign": {
        "element": "Water",
        "glyph": "♏",
        "mode": "Fixed",
        "name": "Scorpio",
        "tone": "intense, private, transformative",
      },
    },
  ],
  "rahu": {
    "house": 9,
    "longitude": 317.67951670834157,
    "name": "Rahu",
    "sign": {
      "element": "Air",
      "glyph": "♒",
      "mode": "Fixed",
      "name": "Aquarius",
      "tone": "original, detached, future-minded",
    },
  },
  "saturn": {
    "house": 8,
    "longitude": 283.8258224539464,
    "name": "Saturn",
    "sign": {
      "element": "Earth",
      "glyph": "♑",
      "mode": "Cardinal",
      "name": "Capricorn",
      "tone": "ambitious, disciplined, strategic",
    },
  },
  "sun": {
    "house": 9,
    "longitude": 295.31158610141233,
    "name": "Sun",
    "sign": {
      "element": "Earth",
      "glyph": "♑",
      "mode": "Cardinal",
      "name": "Capricorn",
      "tone": "ambitious, disciplined, strategic",
    },
  },
  "timezone": -5,
  "venus": {
    "house": 10,
    "longitude": 323.24892655941005,
    "name": "Venus",
    "sign": {
      "element": "Air",
      "glyph": "♒",
      "mode": "Fixed",
      "name": "Aquarius",
      "tone": "original, detached, future-minded",
    },
  },
  "year": 1990,
}
`;

exports[`Regression Tests - buildReport() > buildReport() produces stable output for Profile 2 1`] = `
{
  "asc": 135.89266363277693,
  "ascSign": {
    "element": "Fire",
    "glyph": "♌",
    "mode": "Fixed",
    "name": "Leo",
    "tone": "expressive, warm, proud",
  },
  "bhagyank": 7,
  "day": 4,
  "dominant": {
    "topElement": "Water",
    "topMode": "Fixed",
  },
  "fullName": "Jane Smith",
  "hour": 8,
  "jd": 2446250.7916666665,
  "jupiter": {
    "house": 6,
    "longitude": 313.3966754041175,
    "name": "Jupiter",
    "sign": {
      "element": "Air",
      "glyph": "♒",
      "mode": "Fixed",
      "name": "Aquarius",
      "tone": "original, detached, future-minded",
    },
  },
  "latitude": 51.5074,
  "longitude": -0.1278,
  "mars": {
    "house": 12,
    "longitude": 110.14173692903933,
    "name": "Mars",
    "sign": {
      "element": "Water",
      "glyph": "♋",
      "mode": "Cardinal",
      "name": "Cancer",
      "tone": "protective, intuitive, loyal",
    },
  },
  "minute": 0,
  "month": 7,
  "moon": {
    "house": 6,
    "longitude": 305.31059654461046,
    "name": "Moon",
    "sign": {
      "element": "Air",
      "glyph": "♒",
      "mode": "Fixed",
      "name": "Aquarius",
      "tone": "original, detached, future-minded",
    },
  },
  "mulank": 4,
  "naamank": 9,
  "planetRows": [
    {
      "house": 11,
      "longitude": 102.25189416933,
      "name": "Sun",
      "sign": {
        "element": "Water",
        "glyph": "♋",
        "mode": "Cardinal",
        "name": "Cancer",
        "tone": "protective, intuitive, loyal",
      },
    },
    {
      "house": 6,
      "longitude": 305.31059654461046,
      "name": "Moon",
      "sign": {
        "element": "Air",
        "glyph": "♒",
        "mode": "Fixed",
        "name": "Aquarius",
        "tone": "original, detached, future-minded",
      },
    },
    {
      "house": 11,
      "longitude": 99.59330938063215,
      "name": "Mercury",
      "sign": {
        "element": "Water",
        "glyph": "♋",
        "mode": "Cardinal",
        "name": "Cancer",
        "tone": "protective, intuitive, loyal",
      },
    },
    {
      "house": 1,
      "longitude": 143.8751374273262,
      "name": "Venus",
      "sign": {
        "element": "Fire",
        "glyph": "♌",
        "mode": "Fixed",
        "name": "Leo",
        "tone": "expressive, warm, proud",
      },
    },
    {
      "house": 12,
      "longitude": 110.14173692903933,
      "name": "Mars",
      "sign": {
        "element": "Water",
        "glyph": "♋",
        "mode": "Cardinal",
        "name": "Cancer",
        "tone": "protective, intuitive, loyal",
      },
    },
    {
      "house": 6,
      "longitude": 313.3966754041175,
      "name": "Jupiter",
      "sign": {
        "element": "Air",
        "glyph": "♒",
        "mode": "Fixed",
        "name": "Aquarius",
        "tone": "original, detached, future-minded",
      },
    },
    {
      "house": 4,
      "longitude": 237.33364763365296,
      "name": "Saturn",
      "sign": {
        "element": "Water",
        "glyph": "♏",
        "mode": "Fixed",
        "name": "Scorpio",
        "tone": "intense, private, transformative",
      },
    },
    {
      "house": 9,
      "longitude": 45.39450808334158,
      "name": "Rahu",
      "sign": {
        "element": "Earth",
        "glyph": "♉",
        "mode": "Fixed",
        "name": "Taurus",
        "tone": "steady, sensual, patient",
      },
    },
    {
      "house": 3,
      "longitude": 225.39450808334163,
      "name": "Ketu",
      "sign": {
        "element": "Water",
        "glyph": "♏",
        "mode": "Fixed",
        "name": "Scorpio",
        "tone": "intense, private, transformative",
      },
    },
    {
      "house": 4,
      "longitude": 250.61472449652,
      "name": "Uranus",
      "sign": {
        "element": "Fire",
        "glyph": "♐",
        "mode": "Mutable",
        "name": "Sagittarius",
        "tone": "free-spirited, wise, restless",
      },
    },
    {
      "house": 5,
      "longitude": 272.12855926569443,
      "name": "Neptune",
      "sign": {
        "element": "Earth",
        "glyph": "♑",
        "mode": "Cardinal",
        "name": "Capricorn",
        "tone": "ambitious, disciplined, strategic",
      },
    },
    {
      "house": 3,
      "longitude": 216.9468381077245,
      "name": "Pluto",
      "sign": {
        "element": "Water",
        "glyph": "♏",
        "mode": "Fixed",
        "name": "Scorpio",
        "tone": "intense, private, transformative",
      },
    },
  ],
  "rahu": {
    "house": 9,
    "longitude": 45.39450808334158,
    "name": "Rahu",
    "sign": {
      "element": "Earth",
      "glyph": "♉",
      "mode": "Fixed",
      "name": "Taurus",
      "tone": "steady, sensual, patient",
    },
  },
  "saturn": {
    "house": 4,
    "longitude": 237.33364763365296,
    "name": "Saturn",
    "sign": {
      "element": "Water",
      "glyph": "♏",
      "mode": "Fixed",
      "name": "Scorpio",
      "tone": "intense, private, transformative",
    },
  },
  "sun": {
    "house": 11,
    "longitude": 102.25189416933,
    "name": "Sun",
    "sign": {
      "element": "Water",
      "glyph": "♋",
      "mode": "Cardinal",
      "name": "Cancer",
      "tone": "protective, intuitive, loyal",
    },
  },
  "timezone": 1,
  "venus": {
    "house": 1,
    "longitude": 143.8751374273262,
    "name": "Venus",
    "sign": {
      "element": "Fire",
      "glyph": "♌",
      "mode": "Fixed",
      "name": "Leo",
      "tone": "expressive, warm, proud",
    },
  },
  "year": 1985,
}
`;

exports[`Regression Tests - buildReport() > buildReport() produces stable output for Profile 3 1`] = `
{
  "asc": 97.41106210138707,
  "ascSign": {
    "element": "Water",
    "glyph": "♋",
    "mode": "Cardinal",
    "name": "Cancer",
    "tone": "protective, intuitive, loyal",
  },
  "bhagyank": 6,
  "day": 14,
  "dominant": {
    "topElement": "Fire",
    "topMode": "Fixed",
  },
  "fullName": "Albert Einstein",
  "hour": 11,
  "jd": 2407422.9375,
  "jupiter": {
    "house": 8,
    "longitude": 324.8451191185686,
    "name": "Jupiter",
    "sign": {
      "element": "Air",
      "glyph": "♒",
      "mode": "Fixed",
      "name": "Aquarius",
      "tone": "original, detached, future-minded",
    },
  },
  "latitude": 48.3984,
  "longitude": 9.9916,
  "mars": {
    "house": 6,
    "longitude": 274.1811988821901,
    "name": "Mars",
    "sign": {
      "element": "Earth",
      "glyph": "♑",
      "mode": "Cardinal",
      "name": "Capricorn",
      "tone": "ambitious, disciplined, strategic",
    },
  },
  "minute": 30,
  "month": 3,
  "moon": {
    "house": 6,
    "longitude": 254.1105154596911,
    "name": "Moon",
    "sign": {
      "element": "Fire",
      "glyph": "♐",
      "mode": "Mutable",
      "name": "Sagittarius",
      "tone": "free-spirited, wise, restless",
    },
  },
  "mulank": 5,
  "naamank": 9,
  "planetRows": [
    {
      "house": 9,
      "longitude": 353.48482197761643,
      "name": "Sun",
      "sign": {
        "element": "Water",
        "glyph": "♓",
        "mode": "Mutable",
        "name": "Pisces",
        "tone": "compassionate, imaginative, porous",
      },
    },
    {
      "house": 6,
      "longitude": 254.1105154596911,
      "name": "Moon",
      "sign": {
        "element": "Fire",
        "glyph": "♐",
        "mode": "Mutable",
        "name": "Sagittarius",
        "tone": "free-spirited, wise, restless",
      },
    },
    {
      "house": 10,
      "longitude": 11.745593562900524,
      "name": "Mercury",
      "sign": {
        "element": "Fire",
        "glyph": "♈",
        "mode": "Cardinal",
        "name": "Aries",
        "tone": "bold, initiating, fast-moving",
      },
    },
    {
      "house": 8,
      "longitude": 312.82963498046615,
      "name": "Venus",
      "sign": {
        "element": "Air",
        "glyph": "♒",
        "mode": "Fixed",
        "name": "Aquarius",
        "tone": "original, detached, future-minded",
      },
    },
    {
      "house": 6,
      "longitude": 274.1811988821901,
      "name": "Mars",
      "sign": {
        "element": "Earth",
        "glyph": "♑",
        "mode": "Cardinal",
        "name": "Capricorn",
        "tone": "ambitious, disciplined, strategic",
      },
    },
    {
      "house": 8,
      "longitude": 324.8451191185686,
      "name": "Jupiter",
      "sign": {
        "element": "Air",
        "glyph": "♒",
        "mode": "Fixed",
        "name": "Aquarius",
        "tone": "original, detached, future-minded",
      },
    },
    {
      "house": 10,
      "longitude": 10.487812470974177,
      "name": "Saturn",
      "sign": {
        "element": "Fire",
        "glyph": "♈",
        "mode": "Cardinal",
        "name": "Aries",
        "tone": "bold, initiating, fast-moving",
      },
    },
    {
      "house": 7,
      "longitude": 301.4846976250001,
      "name": "Rahu",
      "sign": {
        "element": "Air",
        "glyph": "♒",
        "mode": "Fixed",
        "name": "Aquarius",
        "tone": "original, detached, future-minded",
      },
    },
    {
      "house": 1,
      "longitude": 121.48469762500008,
      "name": "Ketu",
      "sign": {
        "element": "Fire",
        "glyph": "♌",
        "mode": "Fixed",
        "name": "Leo",
        "tone": "expressive, warm, proud",
      },
    },
    {
      "house": 2,
      "longitude": 155.42671143091331,
      "name": "Uranus",
      "sign": {
        "element": "Earth",
        "glyph": "♍",
        "mode": "Mutable",
        "name": "Virgo",
        "tone": "analytical, helpful, exacting",
      },
    },
    {
      "house": 11,
      "longitude": 40.06661564688994,
      "name": "Neptune",
      "sign": {
        "element": "Earth",
        "glyph": "♉",
        "mode": "Fixed",
        "name": "Taurus",
        "tone": "steady, sensual, patient",
      },
    },
    {
      "house": 11,
      "longitude": 61.69040052048888,
      "name": "Pluto",
      "sign": {
        "element": "Air",
        "glyph": "♊",
        "mode": "Mutable",
        "name": "Gemini",
        "tone": "curious, verbal, adaptable",
      },
    },
  ],
  "rahu": {
    "house": 7,
    "longitude": 301.4846976250001,
    "name": "Rahu",
    "sign": {
      "element": "Air",
      "glyph": "♒",
      "mode": "Fixed",
      "name": "Aquarius",
      "tone": "original, detached, future-minded",
    },
  },
  "saturn": {
    "house": 10,
    "longitude": 10.487812470974177,
    "name": "Saturn",
    "sign": {
      "element": "Fire",
      "glyph": "♈",
      "mode": "Cardinal",
      "name": "Aries",
      "tone": "bold, initiating, fast-moving",
    },
  },
  "sun": {
    "house": 9,
    "longitude": 353.48482197761643,
    "name": "Sun",
    "sign": {
      "element": "Water",
      "glyph": "♓",
      "mode": "Mutable",
      "name": "Pisces",
      "tone": "compassionate, imaginative, porous",
    },
  },
  "timezone": 1,
  "venus": {
    "house": 8,
    "longitude": 312.82963498046615,
    "name": "Venus",
    "sign": {
      "element": "Air",
      "glyph": "♒",
      "mode": "Fixed",
      "name": "Aquarius",
      "tone": "original, detached, future-minded",
    },
  },
  "year": 1879,
}
`;

exports[`Regression Tests - buildReport() > interpretation() and metricCards() work 1`] = `
[
  {
    "body": "♉ Taurus rising gives a steady, sensual, patient outer style. Your Moon in Virgo makes the inner mind analytical, helpful, exacting, while Mulank 6 adds love, comfort, beauty, responsibility, and relationship karma.",
    "title": "Personality",
  },
  {
    "body": "Venus in the 10 house highlights career, authority, status, public life. The 7th house begins in ♏ Scorpio, so relationships improve when there is intense, private, transformative energy. Bhagyank 8 asks you to choose partners who support discipline, authority, endurance, money lessons, and maturity.",
    "title": "Love Life",
  },
  {
    "body": "The 10th house begins in ♒ Aquarius, favoring work that uses original, detached, future-minded strengths. Sun in the 9 house brings focus to luck, dharma, teachers, higher learning; Mars in the 7 house shows where effort and competition push you forward.",
    "title": "Career",
  },
  {
    "body": "Jupiter in the 2 house expands money, values, food, self-worth, while Saturn in the 8 house rewards patience in shared wealth, intimacy, research, transformation. Your success pattern is strongest when enthusiasm is paired with routine.",
    "title": "Success",
  },
  {
    "body": "The 2nd house starts in ♊ Gemini, suggesting that money grows through curious, verbal, adaptable choices. Rahu in the 9 house can create unusual ambitions, so avoid impulsive risk and build repeatable systems.",
    "title": "Money",
  },
  {
    "body": "The chart is Earth-dominant and cardinal in rhythm. Balance improves when daily habits match that tempo: steady movement for Earth, breath and variety for Air, emotional rest for Water, and physical challenge for Fire.",
    "title": "Health & Energy",
  },
  {
    "body": "The 4th house describes emotional roots and home life. With ♌ Leo there, peace comes from a home environment that allows expressive, warm, proud expression without constant pressure.",
    "title": "Family & Home",
  },
  {
    "body": "The 12th house begins in ♈ Aries. Ketu in the 3 house points to natural detachment around communication, siblings, skills, short travel, which can become wisdom when handled consciously.",
    "title": "Spiritual Growth",
  },
]
`;

exports[`Regression Tests - buildReport() > interpretation() and metricCards() work 2`] = `
[
  [
    "Mulank",
    6,
    "Venus ruled: love, comfort, beauty, responsibility, and relationship karma.",
  ],
  [
    "Bhagyank",
    8,
    "Saturn ruled life path: discipline, authority, endurance, money lessons, and maturity.",
  ],
  [
    "Naamank",
    8,
    "Name vibration supports discipline, authority, endurance, money lessons, and maturity.",
  ],
  [
    "Ascendant",
    "♉ Taurus",
    "22°25 ♉ Taurus sets the equal-house chart.",
  ],
]
`;
